<resources>
    <string name="app_name">EtnoApp</string>
    <string name="action_settings">Settings</string>
    <string name="project_name">EtnoApp</string>
    <string name="message">Traductor Étnico</string>
    <string name="message02">Escribe el texto que quiere traducir aqui</string>
    <string name="original_text">Texto original</string>
    <string name="traduced">Texto traducido</string>
    <string name="button2_text">Traducir</string>
    <string name="type">Type...</string>
    <string-array name="from_language">
        <item>Español</item>
    </string-array>
    <string-array name="to_language">
        <item>Wayuunaiki</item>
    </string-array>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="historial">Traducciones Pasadas</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="google_plus">Google+</string>
    <string name="entrar">Entrar</string>
    <string name="registro">Registro</string>
    <string name="title_activity_registro">Registro</string>

    <string name="etno_cuenta">EtnoCuenta</string>
    <string name="alias">Nombre de usuario</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="empresa">Empresa</string>
    <string name="numero_cel">Numero de celular</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="mensajes">Mensajes</string>
    <string name="enviar">Enviar</string>
    <string name="contraseña">Contraseña</string>

</resources>
