<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="20sp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/message02"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:clickable="false"
        android:paddingRight="75dp"
        android:paddingBottom="10dp"
        android:background="@drawable/image01"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/original_text"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@drawable/editextshape"
            android:inputType="textMultiLine"
            android:hint="@string/type"
            android:gravity="top" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="94dp"
            android:layout_height="30dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/button_swape"
            android:background="@mipmap/flecha_boton"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="94dp"
            android:layout_height="30dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/button_translate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@mipmap/boton_traducir"
            android:text="@string/button2_text"
            android:textColor="#FFF"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/traduced"
            android:textColor="@color/primary_text" />
        <TextView
            android:id="@+id/text_view"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/editextshape"/>
    </LinearLayout>
</LinearLayout>